# mdsnap

./: .gitignore  README.md  mdsnap.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
examples/: chinese.md  markdown_showcase.md  sample.md  test1.md
mdsnap/: cli.py  pdf_export.py
mdsnap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: md_to_cards.py
