[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdsnap"
version = "0.1.0"
description = "Convert Markdown notes into image cards or printable PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE" }
authors = [
  { name = "mdsnap contributors" }
]
dependencies = [
  "pillow>=12.0.0",
  "requests>=2.32.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
svg = ["cairosvg>=2.7"]

[project.scripts]
mdsnap = "mdsnap.cli:main"

[tool.setuptools.packages.find]
include = ["mdsnap", "scripts"]

[tool.setuptools.package-data]
"scripts" = ["data/fonts/*.ttf"]

